Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-10076

DESK.CPL does not show correct theme preview in Windows 7

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.4
    • RosDlls
    • November 2016

    Description

      I tried to run the DESK.CPL applet of ReactOS in Windows 7 and I discovered that the preview of the themes is corrupted, see attached screenshot.
      According to:

      https://msdn.microsoft.com/en-us/library/windows/desktop/ff729175%28v=vs.85%29.aspx

      NONCLIENTMETRICS has different size if WINVER >= 0x0600, I did an experiment by forcing a greater version, but it did not solve the problem, so it should be something else.
      Instead, the classic theme is drawn correctly, because the built-in control in the CPL does all the work without using uxtheme.

      Attachments

        1. Windows 7 Pro 32.png
          16 kB
          Carlo Bramix
        2. bug3.png
          30 kB
          Carlo Bramix
        3. desk.txt
          1 kB
          Carlo Bramix

        Issue Links

          Activity

            People

              learn_more Mark Jansen
              Carlo Bramix Carlo Bramix
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: