[DESK] Fix theme preview for Win7. Patch by Carlo Bramini. CORE-10076 #resolve #comment Thanks!

svn path=/trunk/; revision=73424